--- a/service/src/main/resources/application-home.yml
+++ b/service/src/main/resources/application-home.yml
@@ -2,14 +2,15 @@ server:
   port: 8888
 ---
 spring:
+   profiles: home
    datasource:
       name: iot_device_taolin_dev
       type: com.alibaba.druid.pool.DruidDataSource
       druid:
         filters: stat
-        driver-class-name: com.mysql.jdbc.Driver
-        url: jdbc:mysql://192.168.1.8:13306/iot_device_taolin_dev
-        username: visitor
+        driver-class-name: com.mysql.jdbc.Driver    #Careful  SSL
+        url: jdbc:mysql://127.0.0.1:3306/iot_device_taolin_dev?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=true
+        username: root
         password: root
         initial-size: 1
         min-idle: 1
@@ -23,4 +24,16 @@ spring:
         test-on-return: false
         pool-prepared-statements: false
         max-pool-prepared-statement-per-connection-size: 20
+
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.service.model
+
+pagehelper:
+    helperDialect: mysql
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
+
 
