--- a/eurekaserver/pom.xml
+++ b/eurekaserver/pom.xml
@@ -36,10 +36,10 @@
         </dependency>
 
         <!-- 开启eureka 认证  -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
