--- a/eurekaserver/src/main/resources/application.yml
+++ b/eurekaserver/src/main/resources/application.yml
@@ -1,54 +1,4 @@
 spring:
-  application:
-    name: discovery-service-eurekaServer
----
-spring:
-  profiles: peer1
-server:
-  port: 8761
-eureka:
-  instance:
-    hostname: peer1
-  client:
-    service-url:
-      defaultZone: http://peer2:8762/eureka
-
----
-spring:
-  profiles: peer2
-server:
-  port: 8762
-eureka:
-  instance:
-    hostname: peer2
-  client:
-    service-url:
-      defaultZone: http://peer2:8761/eureka
-security:
-  basic:
-    enabled: true
-  user:
-    name: admin
-    password: 123123
-
-#server:
-#  port: 8761
-# eureka:
- # client:
-  #  register-with-eureka: false
-   # fetch-registry: false
-   # service-url:
-   #  defaultZone: http://localhost:8761/eureka
- #management:
-  #endpoints:
-   # jmx:
-    #  exposure:
-     #   include: health,info
-#management:
- # endpoints:
- #   enabled-by-default: true
-  #endpoint:
-  #  info:
-  #    enabled: true
-
+   profiles:
+     active: peer1
 
