--- a/configclient/pom.xml
+++ b/configclient/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.config.server</groupId>
-    <artifactId>configserver</artifactId>
+    <artifactId>configclient</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>configServer</name>
+    <name>configClient</name>
     <description>springCloud全局配置</description>
 
     <parent>
@@ -35,6 +35,11 @@
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
