--- a/configserver/src/main/resources/application.yml
+++ b/configserver/src/main/resources/application.yml
@@ -1,17 +1,6 @@
 spring:
-   application:
-     name: config-server
-   cloud:
-     config:
-       server:
-          git:
-            uri: https://github.com/601021997/spring-cloud-config-repository.git
-            username: 601021997
-            password: wfy601021997
-
-
-server:
-  port: 8080
+  profiles:
+    active: git
 
 
 
