--- a/eurekaclient/src/main/resources/application.yml
+++ b/eurekaclient/src/main/resources/application.yml
@@ -1,4 +1,4 @@
-server:
+  server:
   port: 8081
   servlet:
     context-path: /wfy
@@ -11,5 +11,8 @@ eureka:
       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/
   instance:
     prefer-ip-address: true
-
+  management:
+    endpoints:
+      web:
+        base-path: /manage
 
