--- a/service/pom.xml
+++ b/service/pom.xml
@@ -42,6 +42,14 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>${springfox.swagger.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
+
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
