--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.wfy.cloud</groupId>
     <artifactId>com-wfy-cloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>javaannotation</module>
+    </modules>
 
 
 </project>
